--- a/RestApiTutorialApp/Base.lproj/Main.storyboard
+++ b/RestApiTutorialApp/Base.lproj/Main.storyboard
@@ -1,58 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1UB-ve-Per">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wxr-MB-nKu">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Users-->
-        <scene sceneID="inf-4S-rjB">
+        <scene sceneID="nVg-Xd-inn">
             <objects>
-                <tableViewController id="nIc-95-Jes" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="ycw-tl-LdD">
+                <viewController id="KaC-Gf-CZs" customClass="HomeViewController" customModule="RestApiTutorialApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SOX-e1-FZp">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="obX-Qk-UXc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="5e9-Oj-RL7">
-                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5e9-Oj-RL7" id="W72-0Q-AkP">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="nIc-95-Jes" id="YV4-sK-69d"/>
-                            <outlet property="delegate" destination="nIc-95-Jes" id="EyB-UU-ldT"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Users" id="AF1-ZI-S2I"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zSU-jQ-IIY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Users" id="oGb-jl-VsX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8UP-ZV-uFm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1055.7251908396945" y="-45.070422535211272"/>
+            <point key="canvasLocation" x="1290.8396946564885" y="-94.366197183098592"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="4an-Ju-vxR">
+        <scene sceneID="bWG-jj-ZwF">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1UB-ve-Per" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wxr-MB-nKu" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mF6-xb-TM8">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tNL-Ia-3LO">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="nIc-95-Jes" kind="relationship" relationship="rootViewController" id="ocN-DJ-ou2"/>
+                        <segue destination="KaC-Gf-CZs" kind="relationship" relationship="rootViewController" id="pXo-Za-KD3"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="anC-EY-cMO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zcw-Sy-M17" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="129.00763358778624" y="-45.070422535211272"/>
+            <point key="canvasLocation" x="364.12213740458014" y="-94.366197183098592"/>
         </scene>
     </scenes>
     <resources>
